[package]
name = "rminions"
version = "0.1.0"
authors = ["brandon phelps <bwp44f@mst.edu>"]
edition = "2018"

[features]
default = []

[dependencies]
rand="0.7.3"

[dependencies.sdl2]
version="0.34"
default-features = false
# features = "bundled", how to mark this as unix / linux only? 
features = ["ttf", "image"]
optional = false


[dependencies.socketcan]
socketcan="*"
optional = true

